force-app/main/default/objects/b3d__Template__c/fields/b3d__Created_on_Package_Version__c.field-meta.xml
<CustomField>
    <fullName>b3d__Created_on_Package_Version__c</fullName>
    <inlineHelpText>What package version of the app was used to create the template on?</inlineHelpText>
    <label>Created on Package Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>