force-app/main/default/objects/b3d__Template__c/fields/b3d__Identifier__c.field-meta.xml
<CustomField>
    <fullName>b3d__Identifier__c</fullName>
    <label>Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>