force-app/main/default/objects/b3d__Template__c/fields/b3d__Redirect_If_Signed__c.field-meta.xml
<CustomField>
    <fullName>b3d__Redirect_If_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redirect If Signed</label>
    <type>Checkbox</type>
</CustomField>