force-app/main/default/objects/b3d__Template__c/fields/b3d__Template_Style__c.field-meta.xml
<CustomField>
    <fullName>b3d__Template_Style__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Style</label>
    <referenceTo>b3d__Template_Style__c</referenceTo>
    <relationshipLabel>Templates</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>