force-app/main/default/objects/b3d__Template__c/fields/b3d__Use_As_Subtemplate__c.field-meta.xml
<CustomField>
    <fullName>b3d__Use_As_Subtemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use as Subtemplate</label>
    <type>Checkbox</type>
</CustomField>