force-app/main/default/objects/b3d__Template__c/fields/b3d__Use_Signature__c.field-meta.xml
<CustomField>
    <fullName>b3d__Use_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Signature</label>
    <type>Checkbox</type>
</CustomField>