force-app/main/default/objects/b3d__Template__c/fields/b3d__View_Only_Mode__c.field-meta.xml
<CustomField>
    <fullName>b3d__View_Only_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Only Mode</label>
    <type>Checkbox</type>
</CustomField>