force-app/main/default/objects/b3d__Template__c/fields/b3d__With_Security_Enforced__c.field-meta.xml
<CustomField>
    <fullName>b3d__With_Security_Enforced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Security Enforced</label>
    <type>Checkbox</type>
</CustomField>