force-app/main/default/objects/b3d__Template__c/listViews/b3d__All.listView-meta.xml
<ListView>
    <fullName>b3d__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>b3d__Use_Signature__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>